Fixes carrer blocks alignment

--- a/styles/Career.module.scss
+++ b/styles/Career.module.scss
@@ -49,6 +49,7 @@
     }
   }
   .no_opening {
+    margin: auto;
     padding: 1rem 1.5rem;
     box-shadow: 0 0 13px 2px #eee;
     outline: 1px solid #b8e5bd;
